--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 <meta property="og:locale" content="zh_CN" />
 <meta name="description" content="Ruby入门 - ruby-lang.tech - Ruby编程 · Rails开发 · 算法题解 · 知识分享" />
 <meta property="og:description" content="Ruby入门 - ruby-lang.tech - Ruby编程 · Rails开发 · 算法题解 · 知识分享" />
-<link rel="canonical" href="https://ruby-lang.tech//" />
-<meta property="og:url" content="https://ruby-lang.tech//" />
+<link rel="canonical" href="http://localhost:4000/" />
+<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Ruby入门" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Ruby入门" />
 <meta name="twitter:site" content="@twitter_username" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Ruby入门 - ruby-lang.tech - Ruby编程 · Rails开发 · 算法题解 · 知识分享","headline":"Ruby入门","name":"Xinjian Zhang","sameAs":["https://github.com/Xinjian-Zhang"],"url":"https://ruby-lang.tech//"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Ruby入门 - ruby-lang.tech - Ruby编程 · Rails开发 · 算法题解 · 知识分享","headline":"Ruby入门","name":"Xinjian Zhang","sameAs":["https://github.com/Xinjian-Zhang"],"url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -288,7 +288,11 @@
   </nav>
 
   <div style="margin-bottom: 2ex; text-align: center; width: 100%;">
-    <img src="/assets/_for_sites/qrcode_wx.jpg" alt="微信公众号二维码" style="width: 80px; height: 80px;">
+    <img
+      src="https://raw.githubusercontent.com/Xinjian-Zhang/pic-host-ruby/refs/heads/main/qrcode_wx.jpg"
+      alt="微信公众号二维码"
+      style="width: 80px; height: 80px;"
+    >
   </div>
 
   <a
@@ -489,7 +493,7 @@
   <p>关注微信公众号 <i class="fab fa-weixin"></i> <b>Ruby入门</b> 获取最新内容更新！</p>
   <p style="font-size: 0.85em; color: #666;">
     本站为中文Ruby学习平台，区别于官网 <a href="https://www.ruby-lang.org" target="_blank">ruby-lang.org</a><br>
-    This is a Buby learning site in Chinese, different from
+    This is a Ruby learning site in Chinese, different from
     <a href="https://www.ruby-lang.org" target="_blank">ruby-lang.org</a><br>
     中国語のRuby学習サイト、<a href="https://www.ruby-lang.org" target="_blank">ruby-lang.org</a>と異なります
   </p>
